luckybreak/static/less/homepage.less
@font_colour: #424242;

body.homepage {
  nav {
    &.top {
      background-color: transparent !important;
      box-shadow: none;

      a {
        color: #eeeeee;

        &:hover {
          color: #ffffff;
          background-color: transparent;
        }
      }
    }
    .nav-wrapper {
      z-index: 1;
    }
  }
  .hero-wrap {
    margin-top: -65px;
    min-height: 700px;
    position: relative;

    @media only screen and (max-width: 600px) {
      margin-bottom: -65px;
      height: 800px;
    }

    .hero {
      background-position: center !important;
      background-repeat: no-repeat !important;
      background-size: cover !important;
      min-height: 700px;
      text-align: center;
      position: absolute;
      padding: 0 0 0 0;
      width: 100%;
      overflow: hidden;
      top: 0;
      z-index: 0;

      @media only screen and (max-width: 600px) {
        height: 800px;
      }

      &>div {
        display: table;
        width: 100%;
        height: 700px;
        background-color: rgba(0, 0, 0, .25);

        @media only screen and (max-width: 600px) {
          height: 800px;
        }

        &>div {
          text-align: center;
          display: table-cell;
          vertical-align: middle;
          color: #ffffff;

          h1 {
            margin-top: 0;
            font-size: 4.5rem;
            font-weight: bold;
            margin-top: -30px;
          }

          h2 {
            font-size: 1.8rem;
            font-weight: 500;
            margin-top: 4.0rem;
            margin-bottom: 4.0rem;
          }

          p {
            font-size: 1.1rem;
            font-weight: 500;
            margin-left: 50px;
            margin-right: 50px;
          }

          @media only screen and (max-width: 600px) {
            h1 {
              margin-top: 10px;
              margin-bottom: 2.0rem;
              font-size: 3.7rem;
            }
            h2 {
              margin-top: 2.0rem;
              margin-bottom: 2.0rem;
              font-size: 1.5rem;
            }
          }
        }
      }
    }
  }
  .search-nav {
    height: auto;
    overflow: hidden;
    position: relative;
    margin-bottom: 30px;

    form {
      .input-field input[type=text] {
        background-color: #ffffff;
        color: @font_colour;
        padding-left: 4px;
        border-radius: 2px;
      }

      .caret {
        color: @font_colour;
        z-index: 1;
        font-weight: normal;
        font-size: 1rem;
      }
    }

    &.hide-on-small-only {
      min-height: 64px;

      .input-field.inline input, .input-field.inline .select-dropdown, .datepicker.picker__input {
        margin-bottom: 0.2rem;
      }

      .row {
        margin-bottom: 0;
      }

      .select-wrapper input.select-dropdown, .datepicker.picker__input {
        height: 2.5rem;
      }

      .datepicker-wrap {
        margin-top: -6px;
      }

      .btn {
        height: 39px;
        margin-left: 20px;
        margin-top: -4px;
        font-weight: bold;
        text-transform: initial;

        .material-icons {
          height: 100%;
          line-height: inherit;
        }
      }

      form {
        .form-text {
          font-weight: bold;
          font-size: 1.2rem;

          &:not(first-child) {
            margin-left: 15px;
          }

          &:not(last-child) {
            margin-right: 5px;
          }
        }
      } 
    }

    &.hide-on-med-and-up {
      form {
        padding-top: 20px;
      }

      .input-field {
        i {
          line-height: 43px;
          
          &.standard {
            line-height: 56px;
          }
        }
      }
      button[type="submit"] {
        font-weight: bold;

        i {
          line-height: 36px;
        }
      }
    }
  }
}

